this is last commit before summit fixed the scroll bug in the sidebar and also added fixed-top to navbar

--- a/meal-app-coding-ninjas-master/index.html
+++ b/meal-app-coding-ninjas-master/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-dark" >
+    <nav class="navbar navbar-light bg-dark fixed-top" >
         <div class="container-fluid d-flex justify-content-center">
           <span class="navbar-brand mb-0 h1"><a class="heading-link" href="/">Meals</a></span>
         </div>
